<resources>
    <string name="app_name">D\'Kos</string>
    <string name="desc_img_house">Image of House</string>
    <string name="hint_email">Masukkan email anda</string>
    <string name="hint_notelp">Masukkan no. telp anda</string>
    <string name="hint_location">Masukkan alamat lengkap anda</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="hint_password">Masukkan kata sandi anda</string>
    <string name="txt_sign_in">Masuk</string>
    <string name="txt_welcome">Selamat Datang</string>
    <string name="txt_subwelcome">Yuk cari kos idamanmu \nSekarang di D\'Kos</string>
    <string name="txt_subtxt_signup">Belum Punya Akun?</string>
    <string name="txt_signup">Daftar</string>
    <string name="txt_title_signup">Daftar di D\'KOS</string>
    <string name="txt_role">Saya mau daftar sebagai</string>
    <string name="desc_img_role">Image of Role</string>
    <string name="txt_role_user">Pencari Kos</string>
    <string name="txt_role_owner">Pemilik Kos</string>
    <string name="txt_fullname">Nama Lengkap</string>
    <string name="hint_fullname">Masukkan nama anda</string>
    <string name="hint_boarding_name">Masukkan kos anda</string>
    <string name="txt_welcomeback">Selamat datang kembali</string>
    <string name="hint_place">Jakarta Barat</string>
    <string name="desc_img_ava">Image of Avatar User</string>
    <string name="desc_img_boarding_house_image">Boarding House Image</string>
    <string name="txt_result_for">Result For</string>
    <string name="desc_img_featured_boarding_house">Featured Boarding House Image</string>
    <string name="txt_featured">Featured</string>
    <string name="txt_rekomendation">Rekomendasi</string>
    <string name="txt_wishlist">Daftar Wishlist</string>
    <string name="desc_icon_back">Icon Back</string>
    <string name="txt_location">Alamat</string>
    <string name="txt_facility">Fasilitas</string>
    <string name="desc_icon_facilities">Icon Facilities</string>
    <string name="txxt_description">Deskripsi</string>
    <string name="txt_price_unit">Harga / Bulan</string>
    <string name="txt_rentnow">Sewa Sekarang</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_changepassword">Ubah Password</string>
    <string name="desc_icon_changepw">Icon of Change Password</string>
    <string name="desc_icon_of_expandable">Icon of Expandable</string>
    <string name="txt_logout">Keluar Akun</string>
    <string name="desc_icon_logout">Icon Logout</string>
    <string name="txt_account">Akun</string>
    <string name="txt_information">Informasi Pribadi</string>
    <string name="tv_settings">Pengaturan</string>
    <string name="txt_helper">Pusat Bantuan</string>
    <string name="txt_needhelp">Butuh Bantuan?</string>
    <string name="txt_change_pp">Ganti Foto Profil</string>
    <string name="txt_no_telp">No. Telp</string>
    <string name="btn_saveprofile">Simpan Profile</string>
    <string name="txt_manage">Kelola Kos Anda</string>
    <string name="txt_desc_create_house">Buat properti kos anda</string>
    <string name="txt_create_house">Tambah Kos</string>
    <string name="desc_icon_next">Icon of Next</string>
    <string name="txt_desc_call_centre">Info bantuan seputra D\'kos</string>
    <string name="txt_newest_house">List Kost Terbaru</string>
    <string name="txt_help">Bantuan</string>
    <string name="txt_found_problems">Ada masalah dan butuh bantuan?</string>
    <string name="txt_desc_calls_admin">Jangan ragu untuk menghubungi admin d\'kos</string>
    <string name="txt_connectwa">Hubungi via WA</string>
    <string name="txt_connect_email">Hubungi via Email</string>
    <string name="txt_manage_your_house">Kelola Kos Anda</string>
    <string name="txt_find_yourhouse">Cari kos anda</string>
    <string name="btn_edit">Edit Data Kos</string>
    <string name="btn_delete">Hapus Kos</string>
    <string name="txt_boarding_name">Nama Kos</string>
    <string name="txt_boarding_location">Alamat kos</string>
    <string name="hint_boarding_location">Masukkan alamat kos</string>
    <string name="txt_boarding_province">Kota</string>
    <string name="hint_boarding_province">Masukkan kota kos anda</string>
    <string name="txt_boarding_districs">Kecamatan</string>
    <string name="hint_boarding_districs">Masukkan kecamatan kos anda</string>
    <string name="txt_boarding_price">Harga/bulan</string>
    <string name="hint_boarding_price">Masukkan harga kos</string>
    <string name="txt_boarding_facility">Fasilitas</string>
    <string name="btn_save">Simpan Kos</string>
    <string name="txt_television">Television</string>
    <string name="txt_parkalot">Parkir</string>
    <string name="txt_airconditioner">AC</string>
    <string name="txt_kitchen">Kitchen</string>
    <string name="txt_cctv">CCTV</string>
    <string name="txt_bathroom">Kamar Mandi</string>
    <string name="desc_image_of_upload">Image of Upload</string>
    <string name="txt_old_password">Password lama</string>
    <string name="txt_new_password">IPassword baru</string>
    <string name="txt_confirm_new_password">Ketik ulang password baru</string>
    <string name="hint_old_password">Masukkan password lama</string>
    <string name="hint_new_password">Masukkan password baru</string>
    <string name="hint_confirm_new_password">Ketik ulang password baru</string>
    <string name="btn_change_password">Ubah Password</string>
</resources>
