<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/desc_icon_changepw"
        app:layout_constraintBottom_toBottomOf="@+id/tv_changepassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_changepassword"
        app:srcCompat="@drawable/ic_lock" />

    <TextView
        android:id="@+id/tv_changepassword"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_changepassword"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_changepassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_changepassword"
        app:srcCompat="@drawable/ic_down"
        android:contentDescription="@string/desc_icon_of_expandable" />

    <LinearLayout
        android:id="@+id/ll_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BasicIcon"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_changepassword">

        <TextView
            android:id="@+id/tv_title_old_password"
            style="@style/TitleMedium"
            android:text="@string/txt_old_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_old_password"
            app:passwordToggleEnabled="true"
            style="@style/CustomTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_old_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_title_new_password"
            style="@style/TitleMedium"
            android:text="@string/txt_new_password"
            app:passwordToggleEnabled="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_new_password"
            style="@style/CustomTextInputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_title_confirm_new_password"
            style="@style/TitleMedium"
            android:text="@string/txt_confirm_new_password"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/CustomTextInputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_new_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            style="@style/CustomButton"
            android:text="@string/btn_change_password"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_logout"
        style="@style/Body"
        android:text="@string/txt_logout"
        app:layout_constraintStart_toEndOf="@+id/iv_logout"
        app:layout_constraintTop_toBottomOf="@+id/ll_change_password" />

    <ImageView
        android:id="@+id/iv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/desc_icon_logout"
        app:layout_constraintBottom_toBottomOf="@+id/tv_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_logout"
        app:srcCompat="@drawable/ic_logout" />
</androidx.constraintlayout.widget.ConstraintLayout>