<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_img_ava"
        android:src="@drawable/img_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/Title"
        android:layout_marginTop="0dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar"
        tools:text="Hello, Stepanie" />

    <TextView
        android:id="@+id/tv_welcomeback"
        style="@style/Body2"
        android:layout_marginTop="0dp"
        android:text="@string/txt_welcomeback"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_account"
        style="@style/Title"
        android:layout_marginTop="32dp"
        android:text="@string/txt_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

    <ImageView
        android:id="@+id/iv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_account"
        app:srcCompat="@drawable/ic_user" />

    <TextView
        android:id="@+id/tv_information"
        style="@style/Body2"
        android:layout_marginStart="8dp"
        android:text="@string/txt_information"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_information"
        app:layout_constraintTop_toBottomOf="@+id/tv_account" />

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_information"
        app:srcCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/tv_settings"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_settings"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_settings"
        app:layout_constraintTop_toBottomOf="@+id/iv_information" />

    <TextView
        android:id="@+id/tv_helper"
        style="@style/Title"
        android:text="@string/txt_helper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings" />

    <ImageView
        android:id="@+id/iv_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_helper"
        app:srcCompat="@drawable/ic_hotline" />

    <TextView
        android:id="@+id/tv_needhelp"
        style="@style/Body2"
        android:layout_marginStart="8dp"
        android:text="@string/txt_needhelp"
        app:layout_constraintStart_toEndOf="@+id/iv_call"
        app:layout_constraintTop_toBottomOf="@+id/tv_helper" />

</androidx.constraintlayout.widget.ConstraintLayout>